# bigid-image-stalker

./: README.md  architecture.md  cloudformation.yaml  config.example.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
container_crawler/: __init__.py  __main__.py  config.py  lambda_handler.py  models.py
container_crawler/crawlers/: __init__.py  base.py  dockerhub.py  ecr.py  quay.py
container_crawler/notifications/: __init__.py  base.py  console.py  slack.py  webhook.py
container_crawler/storage/: __init__.py  base.py  dynamodb.py
container_image_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
diagrams/: execution-flow.mmd  system-overview.mmd
tests/: conftest.py  test_config.py  test_lambda_handler.py  test_main.py  test_models.py  test_plugin_registries.py
tests/crawlers/: test_base.py  test_dockerhub.py  test_ecr.py  test_quay.py
tests/notifications/: test_console.py  test_slack.py  test_webhook.py
tests/storage/: test_dynamodb.py
