[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "container-image-crawler"
version = "0.1.0"
description = "Modular crawler for public container registries (ECR, DockerHub, Quay.io, and more)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "boto3>=1.26.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23.0",
]

[project.scripts]
container-crawler = "container_crawler.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
